News UAT/force-app/main/default/objects/Keyword_Match__c/Keyword_Match__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Item-00040 - This setting is used by Email Routing (Email-to-Case)</description>
    <label>Keyword Match</label>
</CustomObject>