News UAT/force-app/main/default/objects/Keyword_Match__c/fields/Input_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Input_Keyword__c</fullName>
    <label>Input Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>