News UAT/force-app/main/default/objects/Keyword_Match__c/fields/Input_Object__c.field-meta.xml
<CustomField>
    <fullName>Input_Object__c</fullName>
    <label>Input Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>