News UAT/force-app/main/default/objects/Keyword_Match__c/fields/Output_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Output_Object_Field__c</fullName>
    <label>Output Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>