News UAT/force-app/main/default/objects/Keyword_Match__c/listViews/Keyword_Match.listView-meta.xml
<ListView>
    <fullName>Keyword_Match</fullName>
    <columns>NAME</columns>
    <columns>Input_Keyword__c</columns>
    <columns>Input_Object__c</columns>
    <columns>Output_Object__c</columns>
    <columns>Output_Object_Field__c</columns>
    <columns>Output_Object_Field_String__c</columns>
    <filterScope>Everything</filterScope>
    <label>Keyword Match</label>
</ListView>